[package]
name = "rust_android_ios"
version = "0.0.1"
authors = ["Ivan Schuetz <ivanhp978@gmail.com>"]
build = "build.rs"
edition = "2018"

[lib]
name = "mobcore"
crate-type = ["cdylib", "staticlib"]

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"
core-foundation = "0.6.2"

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.8"
jni-sys = "0.3.0"

[build-dependencies]
rust_swig = "0.4"
env_logger = "0.6"
bindgen = "0.42.2"
cbindgen = "0.6.0"
