[package]
name = "rust_android_ios"
version = "0.0.1"
authors = ["Ivan Schuetz <ivanhp978@gmail.com>"]
build = "build.rs"
edition = "2018"

[lib]
name = "core"
crate-type = ["cdylib", "staticlib"]

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"
core-foundation = "0.6.2"

[dependencies]
log = "0.4.6"
log-panics = "2.0"
serde_json = "1.0"
serde = "1.0"
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.16", default-features = false }
[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.8"

[build-dependencies]
env_logger = "0.6"
bindgen = "0.42.2"
cbindgen = "0.9.0"
